sort.basic.cocktail.AlgCocktailSort1.scala.error
Compilation error:
AlgCocktailSort1:6: error: ')' expected but integer literal found.
    for ( i <- to 0 to getNombreValeurs()-2){
                  ^AlgCocktailSort1:6: error: ';' expected but ')' found.
    for ( i <- to 0 to getNombreValeurs()-2){
                                           ^